expected/main/core/bitdata/bitdata22.err
ERROR: "actual/main/core/bitdata/bitdata22.lc", line 2
bitdata Dov   = Dov [ x :: Dov ]        -- invalid, for prev
^
Unable to determine a unique BitSize value for Dov

ERROR: Aborting after previously reported error

